@@ -79,9 +79,7 @@
 
     <target name="run" depends="init-common">
         <antcall target="run_ejb"/>
-<!-- Doesn't work
         <antcall target="run_rest"/>
--->
     </target>
 
     <target name="run_ejb" depends="init-common">
@@ -91,7 +89,9 @@
 
     <target name="run_rest" depends="init-common">
         <antcall target="run_war_rest"/>
+<!-- Doesn't work
         <antcall target="run_dir_rest"/>
+-->
     </target>
 
     <target name="run_war_ejb" depends="init-common">
@@ -129,12 +129,15 @@
     <target name="run_test" depends="init-common" xmlns:if="ant:if" xmlns:unless="ant:unless">
        <java  fork="on"
               failonerror="true"
+              modulepath="${env.S1AS_HOME}/lib/bootstrap"
               classpath="${test-path}:${assemble.dir}/${appname}-pu.jar:${embedded.classpath}:${build.classes.dir}:${mvn.lib.dir}/reporter.jar"
               classname="${se.client}">
            <jvmarg value="-Dorg.glassfish.ejb.embedded.keep-temporary-files=true"/>
+           <jvmarg value="--add-modules" />
+           <jvmarg value="ALL-MODULE-PATH" />
            <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
            <jvmarg value="--add-opens=java.naming/javax.naming.spi=ALL-UNNAMED" />
-       	   <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:9009" if:set="env.GLASSFISH_SUSPEND" />
+           <jvmarg value="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:9009" if:set="env.GLASSFISH_SUSPEND" />
            <arg line="${appname}"/>
            <arg line="${test}"/>
            <arg line="${packaging}"/>
